edit works strange

--- a/src/main/resources/templates/players-action.html
+++ b/src/main/resources/templates/players-action.html
@@ -119,11 +119,11 @@
                                 </div>
                                 <div class="form-group mt-3">
                                   <label for="formGroupExampleFirstname" class="d-flex justify-content-center mb-0 font-weight-bold">First Name</label>
-                                  <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleFirstname" th:name="firstname" th:value="${user.getFirstName()}" placeholder="First Name">
+                                  <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleFirstname" th:name="first_name" th:value="${user.getFirstName()}" placeholder="First Name">
                                 </div>
                                 <div class="form-group">
                                   <label for="formGroupExampleSurname" class="d-flex justify-content-center mb-0 font-weight-bold">Last Name</label>
-                                  <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleSurname" th:name="lastname" th:value="${user.getLastName()}" placeholder="Last Name">
+                                  <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleSurname" th:name="last_name" th:value="${user.getLastName()}" placeholder="Last Name">
                                 </div>
                                 <div class="form-group">
                                   <label for="formGroupExampleAge" class="d-flex justify-content-center mb-0 font-weight-bold">Age</label>
