--- a/src/main/resources/templates/players-action.html
+++ b/src/main/resources/templates/players-action.html
@@ -72,8 +72,8 @@
                     <th scope="col">E-mail</th>
                     <th scope="col">Role</th>
 
-                    <th scope="col">Edit info</th>
-                    <th scope="col">Delete player</th>
+                    <th scope="col">Edit</th>
+                    <th scope="col">Delete</th>
 
 
                   </tr>
@@ -106,24 +106,24 @@
                         <div class="modal-dialog modal-dialog-centered">
                           <div class="modal-content">
                             <div class="modal-header">
-                              <h5 class="modal-title" id="exampleModalEdit">Modify Player</h5>
+                              <h5 class="modal-title" id="exampleModalEdit">Edit user</h5>
                               <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                               </button>
                             </div>
                             <div class="modal-body">
                               <div class="container-fluid">
-                                <div class="form-group  mt-1">
+                                <div class="form-group">
                                   <label for="formGroupExampleId" class="d-flex justify-content-center mb-0 font-weight-bold">ID</label>
                                   <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleId" th:name="id" th:value="${user.getId()}" placeholder="Id" disabled>
                                 </div>
-                                <div class="form-group mt-3">
+                                <div class="form-group">
                                   <label for="formGroupExampleFirstname" class="d-flex justify-content-center mb-0 font-weight-bold">First Name</label>
-                                  <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleFirstname" th:name="first_name" th:value="${user.getFirstName()}" placeholder="First Name">
+                                  <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleFirstname" th:name="firstName" th:value="${user.getFirstName()}" placeholder="First Name">
                                 </div>
                                 <div class="form-group">
                                   <label for="formGroupExampleSurname" class="d-flex justify-content-center mb-0 font-weight-bold">Last Name</label>
-                                  <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleSurname" th:name="last_name" th:value="${user.getLastName()}" placeholder="Last Name">
+                                  <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExampleSurname" th:name="lastName" th:value="${user.getLastName()}" placeholder="Last Name">
                                 </div>
                                 <div class="form-group">
                                   <label for="formGroupExampleAge" class="d-flex justify-content-center mb-0 font-weight-bold">Age</label>
@@ -137,6 +137,7 @@
                                   <label for="formGroupExamplePassword" class="d-flex justify-content-center mb-0 font-weight-bold">Password</label>
                                   <input type="text" class="form-control form-control-sm w-50 mx-auto" id="formGroupExamplePassword" th:name="password"  placeholder="Password">
                                 </div>
+
                                 <div class="form-group">
                                   <label  class="d-flex justify-content-center mb-0 font-weight-bold">Role</label>
                                   <select required class="form-control form-control-sm w-50 mx-auto"  th:name="roles"  size="2" >
@@ -151,7 +152,7 @@
                             </div>
                             <div class="modal-footer">
                               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                              <button type="submit"  class="btn btn-primary">Modify</button>
+                              <button type="submit"  class="btn btn-primary">Edit</button>
                             </div>
                           </div>
                         </div>
@@ -161,7 +162,6 @@
 
                     <!-- modal delete -->
                     <div class="modal fade" th:id="${'delete'+user.id}" tabindex="-1" aria-hidden="true">
-<!--                      <form th:action="@{/admin/{id}(id=${user.getId()})}" th:method="delete" >-->
                       <form th:action="@{/admin/{id}(id=${user.getId()})}" th:method="delete" >
                         <div class="modal-dialog">
                           <div class="modal-content">
